; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_buffer.c_recvall.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_buffer.c_recvall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IO_DONE = common dso_local global i32 0, align 4
@IO_CLOSED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @recvall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recvall(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %10 = load i32, i32* @IO_DONE, align 4
  store i32 %10, i32* %6, align 4
  store i64 0, i64* %7, align 8
  br label %11

11:                                               ; preds = %15, %2
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @IO_DONE, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %28

15:                                               ; preds = %11
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @buffer_get(i32 %16, i8** %8, i64* %9)
  store i32 %17, i32* %6, align 4
  %18 = load i64, i64* %9, align 8
  %19 = load i64, i64* %7, align 8
  %20 = add i64 %19, %18
  store i64 %20, i64* %7, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = load i64, i64* %9, align 8
  %24 = call i32 @luaL_addlstring(i32* %21, i8* %22, i64 %23)
  %25 = load i32, i32* %4, align 4
  %26 = load i64, i64* %9, align 8
  %27 = call i32 @buffer_skip(i32 %25, i64 %26)
  br label %11

28:                                               ; preds = %11
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* @IO_CLOSED, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %39

32:                                               ; preds = %28
  %33 = load i64, i64* %7, align 8
  %34 = icmp ugt i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %32
  %36 = load i32, i32* @IO_DONE, align 4
  store i32 %36, i32* %3, align 4
  br label %41

37:                                               ; preds = %32
  %38 = load i32, i32* @IO_CLOSED, align 4
  store i32 %38, i32* %3, align 4
  br label %41

39:                                               ; preds = %28
  %40 = load i32, i32* %6, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %37, %35
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @buffer_get(i32, i8**, i64*) #1

declare dso_local i32 @luaL_addlstring(i32*, i8*, i64) #1

declare dso_local i32 @buffer_skip(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
